examples/test/testpolicy11883.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11883
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key38: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value4
      podSelector:
        matchLabels:
          key39: value8
          key38: value47
          key15: value18
